--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:csv"
+  ],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
+    "languages": [
       {
-        "command": "csv-aligner.helloWorld",
-        "title": "Hello World"
+        "id": "csv",
+        "aliases": ["CSV", "csv"],
+        "extensions": [".csv"]
+      }
+    ],
+    "inlayHints": [
+      {
+        "language": "csv"
       }
     ]
   },
