--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "activationEvents": [
     "onLanguage:csv"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gsmithapps/csv-aligner"
+  },
   "main": "./out/extension.js",
   "contributes": {
     "languages": [
@@ -36,7 +40,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.92.0",
+    "@types/vscode": "^1.90.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
