--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "csv-aligner",
   "displayName": "csv-aligner",
   "description": "aligns csvs using inlay hints",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "engines": {
     "vscode": "^1.94.0"
   },
@@ -31,6 +31,7 @@
       }
     ]
   },
+  "icon": "CSV-Aligner-icon.png",
   "publisher": "GrantSmith",
   "scripts": {
     "vscode:prepublish": "npm run compile",
