--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       }
     ]
   },
-  "icon": "CSV-Aligner-icon.png",
+  "icon": "images/CSV-Aligner-icon.png",
   "publisher": "GrantSmith",
   "scripts": {
     "vscode:prepublish": "npm run compile",
