--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onLanguage:csv"
+    "onLanguage:csv",
+    "onLanguage:tsv"
   ],
   "repository": {
     "type": "git",
@@ -18,23 +19,26 @@
   },
   "main": "./out/extension.js",
   "contributes": {
-    "languages": [
-      {
-        "id": "csv",
-        "aliases": [
-          "CSV",
-          "csv"
-        ],
-        "extensions": [
-          ".csv"
-        ]
-      }
-    ],
-    "inlayHints": [
-      {
-        "language": "csv"
-      }
-    ]
+  "languages": [
+    {
+      "id": "csv",
+      "aliases": ["CSV", "csv"],
+      "extensions": [".csv"]
+    },
+    {
+      "id": "tsv",
+      "aliases": ["TSV", "tsv"],
+      "extensions": [".tsv"]
+    }
+  ],
+  "inlayHints": [
+    {
+      "language": "csv"
+    },
+    {
+      "language": "tsv"
+    }
+  ]
   },
   "icon": "images/CSV-Aligner-icon.png",
   "publisher": "GrantSmith",
